[package]
name = "zxmit"
version = "0.3.0"
edition = "2024"
authors = ["Alex Nihirash <anihirash@gmail.com>"]

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
log = "0.4"
regex = "1.11.1"
simple_logger = "5.0.0" 

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
