[package]
name = "zxmit"
version = "0.2.0"
edition = "2024"

[dependencies]
dirs-next = "2.0"
#iced = { version = "0.13", default-features = false, features = ["tokio", "tiny-skia"] }
iced = { git = "https://github.com/iced-rs/iced.git", default-features = false, features = ["tokio", "tiny-skia"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["fs", "net", "io-util"] }
