[package]
name = "zxmit"
version = "0.4.0"
edition = "2024"

[dependencies]
dirs-next = "2.0"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "7a97773f1796fa7889435c78305d287449dd05a4", default-features = false, features = ["tokio", "wgpu", "sipper"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["fs", "net", "io-util", "sync"] }
zx0 = "1.0.0"
